Fix: agregación del favicon en todas las paginas y corrección del z-index para desplegar el carrito sin hacer desaparecer al header

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -2,7 +2,7 @@ header {
     position: -webkit-sticky !important;
     position: sticky !important;
     top: 0 !important;
-    z-index: 1050 !important;
+    z-index: 1056 !important;
     width: 100%;
     background-color: #fff;
 }
